Boot: integrate MCUBoot with TF-M to act as a BL2 bootloader
Modifications in MCUBoot to be aligned with BL2 requirements in TF-M:
 -- OS dependency was removed, no need to copy any OS repo to build it
 -- CMSIS serial driver is used
 -- flash driver interface is aligned with original version
 -- S and NS images are handeled as a single binary blob
 -- automatic image concatenation and signing at build time
 -- authentication based on SHA256 and RSA-2048 digital signature
 -- mbedTLS library is used for cryptographic operation
 -- static analyser warnings fixed in some files

Change-Id: I54891762eac8d0df634e954ff19a9505b16f3028
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,10 @@
 .settings/
 
 # Garbage files
-build/
+build*/
 objects/
 bin/
 test/*.a
 secure_fw/services/secure_storage/*.o
 secure_fw/services/secure_storage/*.a
+*.orig
