--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 include("Common/BuildSys")
 
 add_subdirectory(app)
+add_subdirectory(bl2/ext/mcuboot)
 
 #Define a top-level generic tfm project
 project(tfm LANGUAGES)
