Boot: Fix build error when built from app folder
The CMake build directory only contains an app folder when TF-M is built
from the project root. By generating the tfm_full.bin into the root of
the build directory we remove the dependency on the app folder.

Change-Id: Id97791c49b91390cc729ed43aa985c61547a5523
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -97,7 +97,7 @@ if (BL2)
 						COMMAND ${PYTHON_EXECUTABLE} ${MCUBOOT_DIR}/scripts/assemble.py
 						ARGS -s $<TARGET_FILE_DIR:tfm_s>/tfm_s.bin
 							 -n $<TARGET_FILE_DIR:tfm_ns>/tfm_ns.bin
-							 -o ${CMAKE_BINARY_DIR}/app/tfm_full.bin
+							 -o ${CMAKE_BINARY_DIR}/tfm_full.bin
 
 						#Sign concatenated binary image with default public key in mcuboot folder
 						COMMAND ${PYTHON_EXECUTABLE} ${MCUBOOT_DIR}/scripts/imgtool.py
@@ -107,8 +107,8 @@ if (BL2)
 							 -v 1.0
 							 -H 0x400
 							 --pad 0x100000
-							 ${CMAKE_BINARY_DIR}/app/tfm_full.bin
-							 ${CMAKE_BINARY_DIR}/app/tfm_sign.bin
+							 ${CMAKE_BINARY_DIR}/tfm_full.bin
+							 ${CMAKE_BINARY_DIR}/tfm_sign.bin
 				)
 endif()
 
