AuditLog: Build system changes
Modify the cmake build files in order to build the
Audit logging service.

Change-Id: If93d849ba845f883f2cb8b35b8e8a50a2032ab9f
Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -66,8 +66,11 @@ add_subdirectory(${TFM_ROOT_DIR}/test ${CMAKE_BINARY_DIR}/test)
 
 #Add the secure storage library target
 add_subdirectory(${SECURE_FW_DIR}/services/secure_storage)
+#Add the audit logging library target
+add_subdirectory(${SECURE_FW_DIR}/services/audit_logging)
 
 add_dependencies(${PROJECT_NAME} tfm_storage)
+add_dependencies(${PROJECT_NAME} tfm_audit)
 add_dependencies(${PROJECT_NAME} tfm_secure_tests)
 
 #Set macro definitions for the project.
@@ -77,14 +80,14 @@ if (REGRESSION OR CORE_TEST)
 	#The test service veneers may not be referenced in the secure binary so the
 	#veneer objects are explicitly loaded from the secure tests library.
 	if(${COMPILER} STREQUAL "ARMCLANG")
-		target_link_libraries(${PROJECT_NAME} tfm_storage $<TARGET_LINKER_FILE:tfm_secure_tests>\(*veneers.o\) tfm_secure_tests)
+		target_link_libraries(${PROJECT_NAME} tfm_storage tfm_audit $<TARGET_LINKER_FILE:tfm_secure_tests>\(*veneers.o\) tfm_secure_tests)
 	elseif(${COMPILER} STREQUAL "GNUARM")
-		target_link_libraries(${PROJECT_NAME} -Wl,--whole-archive tfm_secure_tests -Wl,--no-whole-archive tfm_storage)
+		target_link_libraries(${PROJECT_NAME} -Wl,--whole-archive tfm_secure_tests -Wl,--no-whole-archive tfm_storage tfm_audit)
 	else()
 		message(FATAL_ERROR "unknown compiler" )
 	endif()
 else()
-	target_link_libraries(${PROJECT_NAME} tfm_storage)
+	target_link_libraries(${PROJECT_NAME} tfm_storage tfm_audit)
 endif()
 
 embedded_set_target_link_defines(TARGET ${PROJECT_NAME} DEFINES "TFM_LVL=${TFM_LVL}")
