--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -45,6 +45,7 @@ else()
 endif()
 
 set(ENABLE_SECURE_STORAGE_SERVICE_TESTS TRUE)
+set(ENABLE_AUDIT_LOGGING_SERVICE_TESTS TRUE)
 set(ENABLE_INVERT_SERVICE_TESTS TRUE)
 include(${CMAKE_CURRENT_LIST_DIR}/CMakeLists.inc)
 
